software/device/webapp/src/components/style.css
/*CSS shared by multiple components and app.tsx styles goes here*/


form input, textarea, select {
    padding: 0.5em 0.6em;
    display: inline-block;
    border: 1px solid #ccc;
    box-shadow: inset 0 1px 3px var(--shadow-colour);
    border-radius: 4px;
    border: 0;
    padding: 0.8em;
    /* box-shadow: inset 0 1px 3px #ddd; */
    border-radius: 8px;
    vertical-align: middle;
    box-sizing: border-box;
    flex-grow: 1;
    background-color: var(--mid-colour);
    color: var(--fg-colour);
}


form input:focus {
    outline: 0;
    border-color: var(--accent-colour);
}

fieldset {
    margin: 0;
    padding: .35em 0 .75em;
    border: 0;
}

/* Aligned Form Elements  */

.aligned .alignGroup {
    margin-bottom: 0.5em;
    display: flex;
}

.aligned .alignGroup label {
    text-align: right;
    display: inline-block;
    vertical-align: middle;
    width: 10em;
    margin: 0 1em 0 0;
}
/* DROP_MENU ADDITIONS HERE */
.aligned .alignGroup select {
    text-align: left;
    width: 10em;
    margin: 0 1em 0 0;
    /* margin-bottom: 10px;
    margin-top: 10px; */
    padding: 0.5em 0.6em;
    display: inline-block;
    border: 1px solid #747474;
    box-shadow: inset 0 1px 3px var(--shadow-colour);
    border-radius: 4px;
    vertical-align: middle;
    box-sizing: border-box;
    flex-grow: 1;
}

.configBlock {
    padding: 10px;
    border: 1px solid #e3e3e3;
    border-radius: 4px;
    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
    margin-bottom: 5px;
    position: relative;
}

.updateButton {
    top: 10px;
    right: 10px;
    position: absolute;
}

.bigButton {
    display: block;
    padding: 10px;
    width: 100%;
    border: none;
    border-radius: 10px !important;
    box-shadow: none;
    background-color: var(--accent-colour);
    color: white;
    font-size: 18px;
    cursor: pointer;
    margin-bottom: 10px;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out
}

.bigButton:hover {
    background-color: var(--light-accent-colour);
}

.addSensor{
    background-color: rgba(185, 213, 215, 0.5);
    color: rgb(73, 77, 77);
}

/* MODEM BUTTON */
.bigButtonRed {
    display: block;
    padding: 10px;
    width: 100%;
    border: none;
    border-radius: 10px !important;
    box-shadow: none;
    background-color: var(--red-button-colour);
    color: white;
    font-size: 18px;
    cursor: pointer;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out
}

.bigButtonRed:hover {
    background-color: var(--red-hover-colour);
}

.addSensor{
    background-color: rgba(185, 213, 215, 0.5);
    color: rgb(73, 77, 77);
}

/* APP LAYOUT */

.topHeader {
    /*position: fixed;*/
    /*top: 0;*/
    /*left: 0;*/
    /*width: 100%;*/
}

/*Small screens (phones) */
@media only screen and (max-width: 768px) {
    .mainContent {
        display: block;
    }

    .col {
        width: 100%;
    }
}

@media only screen and (min-width: 769px) {
    .mainContent {
        display: block;
        max-width: 1224px;
        margin: auto;
    }
    .col {
        float: left;
        width: 50%;
    }
}

.mainContent {
    /*margin-top: 430px;*/
}
.page {
    margin: 10px;
    height: calc(100vh - 230px);
    overflow-x: hidden;
    overflow-y: auto;
}

.toggleButton {
    background-color: #f0f0f0;
    border: 1px solid #ccc;
    border-radius: 3px;
    padding: 5px 10px;
    font-size: 14px;
    cursor: pointer;
    transition: background-color 0.3s, border-color 0.3s;
  }

  .toggleButton:hover {
    background-color: #e6e6e6;
    border-color: #999;
  }

  .switchTheme{
    position: absolute;
    top: 1em;
    left: 1em;
    display: block;
    width: fit-content;
    cursor: pointer;
    background: var(--light-accent-colour);
    border-radius: 30em;
    padding: 1em 1em;
    font-size: 0.75em;

}

